[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ChaosObject/ClickChaos.gd" type="Script" id=1]
[ext_resource path="res://scenes/ChaosObject/Plants/Pflanzen_04_Cylinder327.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://scenes/ChaosObject/Plants/Pflanzen_03_Cylinder278.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://scenes/ChaosObject/Plants/Pflanzen_02_Cylinder233.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://scenes/ChaosObject/Plants/Pflanzen_05_Cylinder378.mesh" type="ArrayMesh" id=5]
[ext_resource path="res://scenes/ChaosObject/Plants/Pflanzen_01_Cylinder197.mesh" type="ArrayMesh" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.1, 0.1, 0.4 )

[node name="Plants" type="Spatial" groups=["chaos"]]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 1 )

[node name="Meshes" type="Spatial" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="MeshInstance" type="MeshInstance" parent="Meshes"]
mesh = ExtResource( 6 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null

[node name="MeshInstance2" type="MeshInstance" parent="Meshes"]
mesh = ExtResource( 4 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null

[node name="MeshInstance3" type="MeshInstance" parent="Meshes"]
mesh = ExtResource( 3 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null

[node name="MeshInstance4" type="MeshInstance" parent="Meshes"]
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null

[node name="MeshInstance5" type="MeshInstance" parent="Meshes"]
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
